[WNC-22] add swagger & add json response for forgot password APIs
